Removes unnecessary lines. Covered by no-space fix instead now

--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -43,15 +43,11 @@
 
 .tiles-justify
 	text-align justify
-	font-size 0
 	line-height normal
 	&:after
 		display inline-block
 		content ""
 		width 100%
-	& > .tile
-		font-size font-size
-		line-height line-height
 
 .h-align-middle {
 	margin-left: auto;
